--- a/SpringData/ExamPrep/14 April 2024/resources/application.properties
+++ b/SpringData/ExamPrep/14 April 2024/resources/application.properties
@@ -2,8 +2,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mobiles?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=danieldinev
-spring.datasource.password=testtest123123
+spring.datasource.username=
+spring.datasource.password=
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
